// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzViewFlag > Snapshots > should match snapshot - default state 1`] = `
"<div class="border-8 border-semantic-warning fixed inset-0 isolate">
  <div class="bg-semantic-warning rounded-t-base text-sm p-8 bottom-0 left-0 right-0 fixed m-auto empty:hidden w-fit"></div>
</div>"
`;

exports[`FzViewFlag > Snapshots > should match snapshot - with custom slot 1`] = `
"<div class="border-8 border-semantic-warning fixed inset-0 isolate">
  <div class="bg-semantic-warning rounded-t-base text-sm p-8 bottom-0 left-0 right-0 fixed m-auto empty:hidden w-fit">Custom slot content</div>
</div>"
`;
